<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:id="@+id/linear_title_softwareinfo"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btn_back_swinfo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="12"
            android:textAllCaps="false"
            android:text="@string/sw_info_back"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical"
            android:background="@color/colorTransparent"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:gravity="center"
            android:text="@string/sw_info_title"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="13"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="650"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:background="@color/gray"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center_vertical"
                android:text="@string/sw_info_script1"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"

                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                >
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center_vertical"
                android:text="@string/sw_info_txt1"
                android:textColor="@color/colorBlack"
                android:textSize="18dp" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                >
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                >
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center_vertical"
                android:text="@string/sw_info_txt2"
                android:textColor="@color/colorBlack"
                android:textSize="18dp" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                >
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:background="@color/gray"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                >
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center_vertical"
                android:text="@string/sw_info_script2"
                android:textColor="@color/colorBlack"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                >
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal"
            android:background="@color/colorWhite"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                >
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:text="@string/sw_info_txt_email_title"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:gravity="center_vertical"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="35"
                android:gravity="center_vertical"
                android:text="@string/sw_info_txt_email"
                android:textColor="@color/colorBlack"
                android:textSize="18dp" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                >
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal"
            android:background="@color/colorWhite"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                >
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:text="@string/sw_info_txt_website_title"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:gravity="center_vertical"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="35"
                android:gravity="center_vertical"
                android:linksClickable="true"
                android:text="@string/sw_info_txt_website"
                android:textColor="@color/colorBlack"
                android:textSize="18dp" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                >
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="350"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            >
        </LinearLayout>


    </LinearLayout>

</LinearLayout>