<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <!-- 타이틀바 -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            />

        <TextView
            android:text="@string/default_bkpin_title"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/colorWhite"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="20"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorBlack"/>
    <!-- //end 타이틀바 -->

    <!-- Notice -->

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="20"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/default_bkpin_enter"
                android:textSize="18dp"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                ></TextView>

            <EditText
                android:id="@+id/edit_default_pw"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:hint="@string/default_bkpin_enter_hint"
                android:textSize="16dp"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:inputType="numberPassword"
                ></EditText>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/default_bkpin_confirm"
                android:textSize="18dp"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                ></TextView>
            <EditText
                android:id="@+id/edit_default_pw_chk"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:hint="@string/default_bkpin_confirm_hint"
                android:textSize="16dp"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:inputType="numberPassword"
                ></EditText>

        </LinearLayout>



    </LinearLayout>
    <!-- Notice -->

    <!-- 닫기 버튼 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorBlack"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_default_bkpin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="18dp"
            android:text="OK"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="18dp" />
    </LinearLayout>
    <!--// 닫기 버튼 -->
</LinearLayout>